change image and notification services to use postgresql

--- a/kubernetes/03-notification-api-configmap.yaml
+++ b/kubernetes/03-notification-api-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: fiap
 data:
   PORT: "3002"
-  DATABASE_URL: "mongodb+srv://gallon5867:uzBCNWg4inDqQmw9@notification-service-cl.gf14b60.mongodb.net/notification-service-cluster?retryWrites=true&w=majority&appName=notification-service-cluster"
+  DATABASE_URL: "postgresql://fiapuser:5@PtC6h6@svc-db-notification:5432/notification?schema=public"
   SMTP_HOST: "sandbox.smtp.mailtrap.io"
   SMTP_PORT: "587"
   SMTP_USER: "22019a356a7fee"
