--- a/kubernetes/06-2-svc-notification-api-service-api.yaml
+++ b/kubernetes/06-2-svc-notification-api-service-api.yaml
@@ -4,8 +4,10 @@ metadata:
   name: svc-notification-api
   namespace: fiap
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+    # service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
 spec:
   type: LoadBalancer
   ports:
